# ResumeAI

./: .env.local  .gitignore  Dockerfile  README.md  TESTS.md  ai_assistant_summarization.py  compose.yml  data_visualization.py  file_reader_functions.py  new-tela-chatbot.tsx  package-lock.json  package.json  pnpm-lock.yaml  req.py
.github/workflows/: clienttests.yml  servertests.yml
backend/: ai_assistant_summarization.py  file_reader_functions.py  main.py
client/: README.md  package-lock.json  package.json  pnpm-lock.yaml
client/resumeai/: package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/assets/: index.ts
client/src/components/: index.tsx
client/src/services/: api.ts
client/src/validations/: loginValidationSchema.ts
client/tests/component/: button.test.tsx  login.test.tsx  messageinput.test.tsx  register.test.tsx
doc/architecture/decisions/: 0002-adoption-of-openai-api.md  0003-adoption-of-git-and-github-for-version-control.md  (+3 more)
server/: Dockerfile  ai_assistant_data_visualization.py  ai_assistant_summarization.py  crud.py  data_visualization.py  file_reader_functions.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  verification_code.py
server/models/: summary.py  user.py
server/routes/: analyze.py  summaries.py  users.py
server/schemas/: summary_schema.py  user_schema.py
server/services/: ai_assistant_data_visualization.py  ai_assistant_message.py  summary_service.py  user_service.py
server/tests/: test_summary.py  test_users.py
server/utils/: security.py
(+36 files in other folders)
