[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "matplotlib>=3.10.0",
    "openai>=1.60.2",
    "pdfplumber>=0.11.5",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.37",
    "striprtf>=0.0.28",
]
