[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.7",
    "matplotlib>=3.10.0",
    "openai>=1.60.2",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "pytest>=8.3.5",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.37",
    "striprtf>=0.0.28",
]
